--- a/src/fake-api/package.json
+++ b/src/fake-api/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "fake-api-server",
+  "name": "fake-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch -p 3005 db.json"
+    "start": "json-server --watch db.json --port 5000"
   },
   "keywords": [],
   "author": "",
